# morning_call

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  instruction.md
debian/: changelog  control  copyright  files
debian/source/: local-options
docs/: RSS_INTEGRATION.md
packaging/: RELEASE_GUIDE.md  awake.rb
packaging/debian/: changelog  control  copyright  rules
resources/: awake.desktop  morning_call.desktop  rss_feeds.example.txt  seed_content.json
src/: main.cpp  main_gui.cpp
src/core/: ContentScorer.cpp  ContentScorer.h  FeedGenerator.cpp  FeedGenerator.h  Scheduler.cpp  Scheduler.h
src/data/: ContentRepository.cpp  ContentRepository.h  Database.cpp  Database.h  UserProfileRepository.cpp  UserProfileRepository.h
src/models/: ContentItem.cpp  ContentItem.h  DailyFeed.cpp  DailyFeed.h  UserProfile.cpp  UserProfile.h
src/services/: ContentProvider.cpp  ContentProvider.h  PreferenceManager.cpp  PreferenceManager.h  RSSFeedConfig.cpp  RSSFeedConfig.h  RSSParser.cpp  RSSParser.h  SeedContentLoader.cpp  SeedContentLoader.h
src/ui/: ContentCard.cpp  ContentCard.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: JsonHelper.cpp  JsonHelper.h  Logger.cpp  Logger.h
